--- a/README
+++ b/README
@@ -1,12 +1,12 @@
 # Backup jobs
 
-Borg + btrfs + systemd = <3
+Borg  + systemd = <3
 
 ## Setup
 
 ```bash
 make install 
-vim /etc/pins2-backup # configure repo
+vim /etc/resebo-backup # configure repo
 make enable
 ```
 
